# EasyAutomationMCP

./: LICENSE  README.md  pyproject.toml
docs/: tmpl_release_docs.md
src/easy_automation_mcp/: __init__.py  __main__.py  _app.py  _state.py  server.py
src/easy_automation_mcp/tools/: __init__.py  flow.py  flow_schema.py  keyboard.py  mouse.py  screen.py
tests/: test_tools.py
